--- a/doc/urbi-report.sty
+++ b/doc/urbi-report.sty
@@ -34,7 +34,7 @@
 \newcommand{\lisp}{Lisp\xspace}
 \newcommand{\lua}{Lua\xspace}
 \newcommand{\matlab}{MatLab\xspace}
-\newcommand{\pascal}{PASCAL\xspace}
+\newcommand{\pascal}{Pascal\xspace}
 \newcommand{\python}{Python\xspace}
 \newcommand{\ruby}{Ruby\xspace}
 \newcommand{\sdk}{SDK\xspace}
