--- a/doc/tutorial/tutorial.tex
+++ b/doc/tutorial/tutorial.tex
@@ -143,10 +143,10 @@ one.
 
 \chapter{First steps}
 \label{sec:tut:first}
-This section intends to provide the most basic notions to write \us
-code. Some aspects are presented only superficially. The point of this
-section is to bootstrap yourself with the \us language, to be able
-to study more in-depth examples afterward.
+This section introduces the most basic notions to write \us code. Some
+aspects are presented only minimally.  The goal of this section is to
+bootstrap yourself with the \us language, to be able to study more
+in-depth examples afterward.
 
 \section{Comments\index{comment}}
 
