doc: make the uobject chapter a part.
	* doc/uobject/api.tex, doc/uobject/use-cases.tex: New,
        extracted from...
	* doc/uobject/uobject.tex: here.
	* doc/introduction.tex: Adjust.

--- a/doc/introduction.tex
+++ b/doc/introduction.tex
@@ -69,9 +69,14 @@ pages, \href{\docurl/urbi-sdk.html}{urbi-sdk.html}.
   The \us operators for concurrency, tags.
 \xitem{sec:tut:event-prog}{Event-based programming}
   Support for event-driven concurrency in \us.
-\xitem{sec:tut:uobject}{UObject Tutorial}%
-  How to write \Cxx components to enrich \us, either with new
-  low-level software modules, or with drivers to sensors or effectors.
+\end{partDescription}
+
+\begin{partDescription}{part:uobject}{The Middleware Architecture: UObjects}
+\xitem{sec:uob:api}{The UObject API}
+  Buildding simple UObjects.
+\xitem{sec:uob:uses}{Use cases}
+  Interfacing a servomotor device as an example on how to use the
+  UObject architecture as a middleware.
 \end{partDescription}
 
 \begin{partDescription}{part:install}{Installation}
