doc: initial sketch for UObject quick start.
	* doc/uobject/quick-start.tex: New.
	* doc/uobject/uobject.tex: Use it.

--- a/doc/uobject/uobject.tex
+++ b/doc/uobject/uobject.tex
@@ -1,4 +1,4 @@
-\part{The Middleware Architecture\\UObjects}
+\part{The Middleware Architecture:\\UObjects}
 \label{sec:tut:uobject}
 
 \chapter*{Introduction}
@@ -28,6 +28,7 @@ The next section is a walk through covering all the aspects of the
 UObject API, and the rest of the chapter describes many use cases in
 details.
 
+\input{uobject/quick-start}
 \input{uobject/api}
 \input{uobject/use-cases}
 
