doc: minor rewording.
	* doc/tutorial/tutorial.tex: Avoid repetitions.

--- a/doc/tutorial/tutorial.tex
+++ b/doc/tutorial/tutorial.tex
@@ -384,8 +384,8 @@ always evaluated, you cannot retrieve their functional value --- of
 course, you can with a different construct, but that's not the point
 here.
 
-Since this output is often irrelevant, it is often hidden in this
-documentation using the \lstinline'|{};' trick (or even
+Since this output is often irrelevant, most of the time it is hidden
+in this documentation using the \lstinline'|{};' trick (or even
 \lstinline'|;'): when evaluating \lstinline'\var{code} | {};', the
 server first evaluates \var{code}, then evaluates \lstinline'{}' and
 return its value, \lstinline'void', which prints to nothing.
