--- a/doc/uobject/uobject.tex
+++ b/doc/uobject/uobject.tex
@@ -1,5 +1,5 @@
 \part{The Middleware Architecture:\\UObjects}
-\label{sec:tut:uobject}
+\label{part:uobject}
 
 \chapter*{Introduction}
 This part guides you through the various steps of writing an \urbi
