--- a/doc/urbi-sdk.tex
+++ b/doc/urbi-sdk.tex
@@ -8,6 +8,9 @@
   \newcommand{\lstindex}[1]{\index{#1@\lstinline{#1}}#1}
   \usepackage{revision}
 
+  \usepackage{config}
+  \newcommand{\uobjectsDir}{\absTopSrcdir/sdk-remote/src/uobjects}
+
 \newcommand{\docurl}{http://www.gostai.com/downloads/urbi-sdk-2.0/doc}
 
 % CONFIGURATION
