doc: fix assertion.
	* doc/specs/string.tex: here.
	Reported by Simon Nivault.

--- a/doc/specs/string.tex
+++ b/doc/specs/string.tex
@@ -122,7 +122,7 @@ assert("Hello == World!".toUpper, "HELLO, WORLD!");
 %  \href{http://www.boost.org/doc/libs/1_39_0/libs/format/doc/format.html,
 %    Boost.Format}.  For instance:
 \begin{urbiscript}[firstnumber=last]
-assert("%s + %s = %s" % [1 == 2, 3], "1 + 2 = 3");
+assert("%s + %s = %s" % [1, 2, 3] == "1 + 2 = 3");
 \end{urbiscript}
 
 \item \lstinline|'*'(\var{n})|\\
