doc: more UObject quick start.
	* doc/uobject/api.tex: Add label.
	* doc/uobject/quick-start.tex: Use it.
	Fix font size.
	Avoid accented chars.
	(UObject Basics): Write it.

--- a/doc/uobject/api.tex
+++ b/doc/uobject/api.tex
@@ -2,6 +2,7 @@
 \label{sec:uob:api}
 
 \section{Creating a class, binding variables and functions}
+\label{sec:uob:api:bind}
 
 Let's illustrate those concepts by defining a simple object:
 \lstinline{adder}. This object has one variable \lstinline{v}, and a
