--- a/doc/urbi-report.sty
+++ b/doc/urbi-report.sty
@@ -38,7 +38,7 @@
 \newcommand{\python}{Python\xspace}
 \newcommand{\ruby}{Ruby\xspace}
 \newcommand{\sdk}{SDK\xspace}
-\newcommand{\umake}{umake\xspace}
+\newcommand{\umake}{\command{umake}\xspace}
 \newcommand{\urbi}{Urbi\xspace}
 \newcommand{\us}{urbiScript\xspace}
 
