--- a/doc/urbi-sdk.tex
+++ b/doc/urbi-sdk.tex
@@ -30,6 +30,7 @@
 \part{Urbi SDK Tutorial}
 \label{part:tut}
 \input{tutorial/tutorial}
+
 \input{uobject/uobject}
 
 
@@ -58,6 +59,12 @@
 
 % printing, operators, waituntil
 
+% LocalWords:  urbi UObjects faq Gostai SAS SDK ec Libport ident rlwrap isVoid
+% LocalWords:  localhost variadic prepended asString myFunction succ slotNames
+% LocalWords:  asFoo setSlot getSlot updateSlot removeSlot uid uids arg ok ko
+% LocalWords:  elt baz quux printSalaries computeSalary protos addProto lookup
+% LocalWords:  removeProto proto o's locateSlot myObj MyPair predefines init
+% LocalWords:  evalArgAt myand lhs ary mytag timeOut onleave myEvent
 % LocalWords:  Urbi monomethods netcat cosinus timestamp subscopes subscope lst
 % LocalWords:  getSlot setSlot updateSlot slotNames removeSlot uid arg ok ko ss
 % LocalWords:  elt baz quux FIXME getslot lookup protos proto addProto asString
